terraform/modules/networking/security.tf
# -----------------------------------------------------------------------------
# SECURITY GROUP: ALB
# Public-facing Load Balancer security group.
# -----------------------------------------------------------------------------
resource "aws_security_group" "alb_sg" {
  name   = "alb-security-group"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------------------------------------------------------------
# SECURITY GROUP: ECS TASKS
# Private application layer, only accessible from ALB.
# -----------------------------------------------------------------------------
resource "aws_security_group" "ecs_tasks_sg" {
  name   = "ecs-tasks-security-group"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port       = var.container_port
    to_port         = var.container_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
